fix: product and image serialization when sending to js

--- a/app/views/products/_compatible_product_carousel.html.erb
+++ b/app/views/products/_compatible_product_carousel.html.erb
@@ -6,9 +6,9 @@
     </div>
   <% else %>
     <div class="my-2 mx-8">
-      <%= compatible_products = product.compatible_products_by_adapter
-                                       .values.flatten.map(&:product)
-                                       .map { |p| p.image = p.image_or_default; p }
+      <%= compatible_products = product.compatible_products
+                                       .map(&:product)
+                                       .map(&:serialize)
           render ProductCarousel::ShowComponent.new(items: compatible_products)
       %>
     </div>
