feat: (tags) tag export button

--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -9,6 +9,9 @@
       <%= link_to "Export Compatibility To CSV", export_compatible_admin_products_path,
                   class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mx-1"
       %>
+      <%= link_to "Export Tags To CSV", export_tags_admin_products_path,
+                  class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded mx-1"
+      %>
     </div>
   </div>
 
