feat: image and url to new product creation

--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -15,7 +15,14 @@
         <%= form.label :brand, "Brand:", class: "block font-medium text-gray-700" %>
         <%= form.select :brand, @brands.map { |b| [b.name, b.id] }, { include_blank: true }, { class: "mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md" } %>
       </div>
+      <div>
+        <%= form.label :url, "URL:", class: "block font-medium text-gray-700" %>
+        <%= form.text_field :url, class: "mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
+      <div>
+        <%= form.label :image_url, "Image URL:", class: "block font-medium text-gray-700" %>
+        <%= text_field_tag :image_url, nil, class: "mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
+      </div>
       <%= form.submit "Create Product", class: "mt-2 px-4 py-2 bg-blue-500 text-white font-bold rounded hover:bg-blue-700" %>
     <% end %>
-  </div>
-</div>
+  </div></div>
